--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -8,7 +8,7 @@ COPY go.sum .
 RUN go mod download
 
 COPY . .
-RUN go build -o /app/main ./cmd
+RUN go build -o /app/main .
 
 # Runtime stage
 FROM gcr.io/distroless/base-debian10
